Separate the 2 conversions that we need for webcomponent properties Case: SVY-6337